<resources>
    <string name="app_name">My Application</string>
    <string name="age">13+</string>
    <string name="movie_avengers">Avengers:</string>
    <string name="movie_part">End Game</string>
    <string name="gerre">Action, Adventure, Fantasy</string>
    <string name="count_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert\nDowney Jr.</string>
    <string name="chris_evans">Chris\nEvans</string>
    <string name="back">Back</string>
    <string name="mark_ruffalo">Mark\nRuffalo</string>
    <string name="chris_hemsworth">Chris\nHemsworth</string>
</resources>