<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_movie_list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <LinearLayout
        android:id="@+id/tv_movies_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_target"
            android:layout_marginStart="16dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Movies List"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_movies_list">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/black"
            >

            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/movie_in_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="12dp"
                android:text="@string/age"
                android:gravity="center"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:background="@drawable/bg_black_square"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/like"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="16dp"/>

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="8sp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/gerre"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/iv_first_star" />

            <ImageView
                android:id="@+id/iv_first_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/iv_movie"
                app:srcCompat="@drawable/ic_star"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/iv_second_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3.5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/iv_first_star"
                app:layout_constraintBottom_toBottomOf="@id/iv_movie"
                app:srcCompat="@drawable/ic_star"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/iv_third_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3.5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/iv_second_star"
                app:layout_constraintBottom_toBottomOf="@id/iv_movie"
                app:srcCompat="@drawable/ic_star"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/iv_fourth_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3.5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/iv_third_star"
                app:layout_constraintBottom_toBottomOf="@id/iv_movie"
                app:srcCompat="@drawable/ic_star"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/iv_star_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3.5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/iv_fourth_star"
                app:layout_constraintBottom_toBottomOf="@id/iv_movie"
                app:srcCompat="@drawable/ic_star_empty"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/count_reviews"
                android:textColor="@color/gray"
                android:textSize="8sp"
                app:layout_constraintStart_toEndOf="@id/iv_star_empty"
                app:layout_constraintBottom_toBottomOf="@id/iv_movie"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                app:layout_constraintTop_toBottomOf="@id/iv_movie"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_name"
                android:text="137 мин"
                android:textColor="@color/gray"
                android:fontFamily="@font/roboto_bold"
                android:textSize="8sp"
                android:paddingBottom="8dp"
                android:layout_marginStart="8dp"
                />





        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>